# twenty-four

./: README.md  cli.py  engine.py  main.py  pyproject.toml
src/twenty_four/: cli.py  engine.py
