[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twenty-four"
version = "1.0.0"
description = "A fast solver for the mathematical 24 Game puzzle"
readme = "README.md"
authors = [
    {name = "Henry Xiu", email = "henryxiu2005@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Puzzle Games",
]
dependencies = [
    "loguru>=0.7.3",
    "typer>=0.17.4",
]

# [project.urls]
# Homepage = "https://github.com/yourusername/twenty-four-solver"
# Repository = "https://github.com/yourusername/twenty-four-solver"
# Issues = "https://github.com/yourusername/twenty-four-solver/issues"

[project.scripts]
twenty-four = "twenty_four.cli:main"
s24 = "twenty_four.cli:main"
